# mcp-tuto

./: .gitignore  README.md  _modified_server_config.json  image.py  main.py  main_image.py  pyproject.toml  requirements.txt  run_server.bat  server_config.json  test.py
grandmeres/: secret1.txt  secret3.txt  secrets2.txt
