[project]
name = "hello-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "requests",
    "beautifulsoup4",
    "mcp-cli>=0.11.1",
    "python-marmiton>=0.4.2",
    "pymongo",
    "fastapi[standard]>=0.124.4",
    "logging>=0.4.9.6",
    "httpx>=0.28.1",
    "fastmcp>=2.14.1",
]
